--- a/index.html
+++ b/index.html
@@ -8,77 +8,84 @@
 <body>
     <nav>
         <div>
-
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, ut. Repellendus, odit, ex eum cons
         </div>
         <ul>
             <li>
-                <a></a>
+                <a>sdfgrh</a>
             </li>
             <li>
-                <a></a>
+                <a>sqwdzefr</a>
             </li>
             <li>
-                <a></a>
+                <a>qdezsfrg</a>
             </li>
         </ul>
     </nav>
 
     <header>
-
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt sint omnis minima enim ab ex magnam inventore, optio doloribus corrupti doloremque sequi, cum placeat architecto tenetur, dolores ipsum. Possimus, voluptatibus.
     </header>
 
     <h1>
-
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo quisquam sequi culpa nobis?
     </h1>
 
     <section>
-        <h2>
+        <img src="carbon1.jpg">
+        <img src="carbon2.jpg">
+        <img src="carbon3.jpg">
+    </section>
 
+    <section>
+        <h2>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
         </h2>
         <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut unde ipsa, sit necessitatibus amet voluptatem? Sint tempore dolores quibusdam impedit consequuntur perferendis velit dolor? Magnam, dolor! Inventore accusantium reprehenderit harum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt, exercitationem. Sequi quas assumenda consectetur vel expedita distinctio corporis dolores quo. Quo placeat adipisci error accusamus explicabo dolore animi asperiores optio.
+        </p>
+    </section>
+    <section>
+        <h2>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        </h2>
+        <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut unde ipsa, sit necessitatibus amet voluptatem? Sint tempore dolores quibusdam impedit consequuntur perferendis velit dolor? Magnam, dolor! Inventore accusantium reprehenderit harum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt, exercitationem. Sequi quas assumenda consectetur vel expedita distinctio corporis dolores quo. Quo placeat adipisci error accusamus explicabo dolore animi asperiores optio.
 
         </p>
     </section>
     <section>
         <h2>
-
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
         </h2>
         <p>
-
-        </p>
-    </section>
-    <section>
-        <h2>
-
-        </h2>
-        <p>
-
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut unde ipsa, sit necessitatibus amet voluptatem? Sint tempore dolores quibusdam impedit consequuntur perferendis velit dolor? Magnam, dolor! Inventore accusantium reprehenderit harum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt, exercitationem. Sequi quas assumenda consectetur vel expedita distinctio corporis dolores quo. Quo placeat adipisci error accusamus explicabo dolore animi asperiores optio.
         </p>
         <input>
-        <button></button>
+        <button>hdifnedjuerf</button>
     </section>
     <section>
         <h2>
-
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
         </h2>
         <p>
-
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut unde ipsa, sit necessitatibus amet voluptatem? Sint tempore dolores quibusdam impedit consequuntur perferendis velit dolor? Magnam, dolor! Inventore accusantium reprehenderit harum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt, exercitationem. Sequi quas assumenda consectetur vel expedita distinctio corporis dolores quo. Quo placeat adipisci error accusamus explicabo dolore animi asperiores optio.
         </p>
     </section>
 
     <footer>
         <div>
-
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis reprehenderit voluptatibus labore animi similique eius ipsa in, harum maxime dignissimos voluptatum praesentium quidem alias nesciunt enim aliquid molestiae molestias? Deleniti.
         </div>
         <ul>
             <li>
-                <a></a>
+                <a>zqesrfd</a>
             </li>
             <li>
-                <a></a>
+                <a>esrfdgtf</a>
             </li>
             <li>
-                <a></a>
+                <a>zerswdfxg</a>
             </li>
         </ul>
     </footer>
